--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
     "@tanstack/react-query": "^5.55.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
